--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
             </div>
         </nav>
     </header>
+    <section class="hero-section">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-8 mx-auto text-center">
+                    <h1 class="display-5 fw-bold mb-4">Tech Academy</h1>
+                    <p class="lead mb-4">Онлайн-обучение современным IT-профессиям. Начните карьеру в технологиях с нами.</p>
+                </div>
+                <a href="" class="btn btn-light btn-lg">Начать обучение</a>
+            </div>
+        </div>
+    </section>
     <footer class="footer">
         <div class="container">
             <div class="row">
