--- a/courses.html
+++ b/courses.html
@@ -10,9 +10,31 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <a href="" class="nav-link active">Главная</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Курсы</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Контакты</a>
+              </li>
+            </ul>
+            <div class="ms-lg-3 mt-3 mt-lg-0">
+              <a href="" class="btn btn-outline-light">Войти</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
     <main>
       <div class="container">
         <div class="row p-4">
@@ -23,103 +45,195 @@
         <div class="row g-5">
           <div class="col-3">
             <div class="card" style="width: 18rem">
-              <img src="images/Програмист.jpg" class="card-img-top card_img" alt="..." />
+              <img
+                src="images/Програмист.jpg"
+                class="card-img-top card_img"
+                alt="..."
+              />
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Информационные технологии</h5>
                 <p class="card-text">
-                  Обучение: 3 года 10 месяцев, на выходе получаете специальность backend-frontend разработчик
+                  Обучение: 3 года 10 месяцев, на выходе получаете специальность
+                  backend-frontend разработчик
                 </p>
-                <a href="#" class="btn btn-outline-dark w-100 mt-auto">Подробнее</a>
+                <a href="#" class="btn btn-outline-dark w-100 mt-auto"
+                  >Подробнее</a
+                >
               </div>
             </div>
           </div>
           <div class="col-3">
             <div class="card" style="width: 18rem">
-              <img src="images/Сварщик.webp" class="card-img-top card_img" alt="..." />
+              <img
+                src="images/Сварщик.webp"
+                class="card-img-top card_img"
+                alt="..."
+              />
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Сварщик</h5>
                 <p class="card-text">
-                  Обучение: 1 год 10 месяцев, на выходе получаете специальность сварщика 3-го разряда
+                  Обучение: 1 год 10 месяцев, на выходе получаете специальность
+                  сварщика 3-го разряда
                 </p>
-                <a href="#" class="btn btn-outline-dark w-100 mt-auto ">Подробнее</a>
+                <a href="#" class="btn btn-outline-dark w-100 mt-auto"
+                  >Подробнее</a
+                >
               </div>
             </div>
           </div>
           <div class="col-3">
             <div class="card" style="width: 18rem">
-              <img src="images/Автомеханик.jpg" class="card-img-top card_img" alt="..." />
+              <img
+                src="images/Автомеханик.jpg"
+                class="card-img-top card_img"
+                alt="..."
+              />
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Автомеханик</h5>
                 <p class="card-text">
-                  Обучение: 1 год 10 месяцев, на выходе получаете специальность автомеханика, и работать в любом СТО своего города
+                  Обучение: 1 год 10 месяцев, на выходе получаете специальность
+                  автомеханика, и работать в любом СТО своего города
                 </p>
-                <a href="#" class="btn btn-outline-dark w-100 mt-auto">Подробнее</a>
+                <a href="#" class="btn btn-outline-dark w-100 mt-auto"
+                  >Подробнее</a
+                >
               </div>
             </div>
           </div>
           <div class="col-3">
             <div class="card" style="width: 18rem">
-              <img src="images/Системный админ.jpg" class="card-img-top card_img" alt="..." />
+              <img
+                src="images/Системный админ.jpg"
+                class="card-img-top card_img"
+                alt="..."
+              />
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Системный администратор</h5>
                 <p class="card-text">
-                    Обучение: 3 год 10 месяцев, на выходе получаете специальность Системного администратора
+                  Обучение: 3 год 10 месяцев, на выходе получаете специальность
+                  Системного администратора
                 </p>
-                <a href="#" class="btn btn-outline-dark w-100 mt-auto">Подробнее</a>
+                <a href="#" class="btn btn-outline-dark w-100 mt-auto"
+                  >Подробнее</a
+                >
               </div>
             </div>
           </div>
           <div class="col-3">
             <div class="card" style="width: 18rem">
-              <img src="images/Програмист.jpg" class="card-img-top card_img" alt="..." />
+              <img
+                src="images/Програмист.jpg"
+                class="card-img-top card_img"
+                alt="..."
+              />
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Информационные технологии</h5>
                 <p class="card-text">
-                  Обучение: 3 года 10 месяцев, на выходе получаете специальность backend-frontend разработчик
+                  Обучение: 3 года 10 месяцев, на выходе получаете специальность
+                  backend-frontend разработчик
                 </p>
-                <a href="#" class="btn btn-outline-dark w-100 mt-auto">Подробнее</a>
+                <a href="#" class="btn btn-outline-dark w-100 mt-auto"
+                  >Подробнее</a
+                >
               </div>
             </div>
           </div>
           <div class="col-3">
             <div class="card" style="width: 18rem">
-              <img src="images/Сварщик.webp" class="card-img-top card_img" alt="..." />
+              <img
+                src="images/Сварщик.webp"
+                class="card-img-top card_img"
+                alt="..."
+              />
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Сварщик</h5>
                 <p class="card-text">
-                  Обучение: 1 год 10 месяцев, на выходе получаете специальность сварщика 3-го разряда
+                  Обучение: 1 год 10 месяцев, на выходе получаете специальность
+                  сварщика 3-го разряда
                 </p>
-                <a href="#" class="btn btn-outline-dark w-100 mt-auto">Подробнее</a>
+                <a href="#" class="btn btn-outline-dark w-100 mt-auto"
+                  >Подробнее</a
+                >
               </div>
             </div>
           </div>
           <div class="col-3">
             <div class="card" style="width: 18rem">
-              <img src="images/Автомеханик.jpg" class="card-img-top card_img" alt="..." />
+              <img
+                src="images/Автомеханик.jpg"
+                class="card-img-top card_img"
+                alt="..."
+              />
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Автомеханик</h5>
                 <p class="card-text">
-                  Обучение: 1 год 10 месяцев, на выходе получаете специальность автомеханика, и работать в любом СТО своего города
+                  Обучение: 1 год 10 месяцев, на выходе получаете специальность
+                  автомеханика, и работать в любом СТО своего города
                 </p>
-                <a href="#" class="btn btn-outline-dark w-100 mt-auto">Подробнее</a>
+                <a href="#" class="btn btn-outline-dark w-100 mt-auto"
+                  >Подробнее</a
+                >
               </div>
             </div>
           </div>
           <div class="col-3">
             <div class="card" style="width: 18rem">
-              <img src="images/Системный админ.jpg" class="card-img-top card_img" alt="..." />
+              <img
+                src="images/Системный админ.jpg"
+                class="card-img-top card_img"
+                alt="..."
+              />
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Системный администратор</h5>
                 <p class="card-text">
-                    Обучение: 3 год 10 месяцев, на выходе получаете специальность Системного администратора
+                  Обучение: 3 год 10 месяцев, на выходе получаете специальность
+                  Системного администратора
                 </p>
-                <a href="#" class="btn btn-outline-dark w-100 mt-auto">Подробнее</a>
+                <a href="#" class="btn btn-outline-dark w-100 mt-auto"
+                  >Подробнее</a
+                >
               </div>
             </div>
           </div>
         </div>
       </div>
     </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-md-6 mb-4">
+            <h4 class="mb-3">Tech Academy</h4>
+            <p>Онлайн-платформа для обучения современным технологиям</p>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-4">
+            <h5 class="mb-3">Навигация</h5>
+            <ul class="list-unstyled">
+              <li class="mb-2">
+                <a href="#" class="text-white text-decoration-none">Главная</a>
+              </li>
+              <li class="mb-2">
+                <a href="#" class="text-white text-decoration-none">Курсы</a>
+              </li>
+              <li class="mb-2">
+                <a href="#" class="text-white text-decoration-none">Контакты</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-3">
+            <h5 class="mb-3">Контакты</h5>
+            <ul class="list-unstyled">
+              <li class="mb-2">info@techAcademy.ru</li>
+              <li class="mb-2">+7 (903) 123-45-67</li>
+            </ul>
+          </div>
+        </div>
+        <hr />
+        <div class="text-center">
+          <p class="mb-0">© 2025 Tech Academy. Все права защищены.</p>
+        </div>
+      </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
