--- a/courses.html
+++ b/courses.html
@@ -36,7 +36,7 @@
       </nav>
     </header>
     <main>
-      <div class="container">
+      <div class="container mb-5">
         <div class="row p-4">
           <div class="col">
             <h2 class="text-center">Список специальностей</h2>
