--- a/index.html
+++ b/index.html
@@ -43,6 +43,24 @@
             </div>
         </div>
     </section>
+ <section class="py-5 bg-light mt-5">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-4 mb-4">
+                    <h3 class="fw-bold text-primary">5000+</h3>
+                    <p class="text-muted">Выпускников</p>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <h3 class="fw-bold text-primary">25</h3>
+                    <p class="text-muted">Курсов</p>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <h3 class="fw-bold text-primary">95%</h3>
+                    <p class="text-muted">Трудоустраиваются</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer class="footer">
         <div class="container">
             <div class="row">
