Добавление отступов у footer

--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
      <header>
@@ -28,8 +35,9 @@
             </div>
         </nav>
     </header>
-    <p class="m-5"><strong>Мы всегда на связи и готовы помочь студентам, преподавателям и абитуриентам. Выберите удобный способ связи или заполните форму — мы ответим как можно быстрее.</strong>
-</p>
+    <div class="main">
+        <p class="m-5"><strong>Мы всегда на связи и готовы помочь студентам, преподавателям и абитуриентам. Выберите удобный способ связи или заполните форму — мы ответим как можно быстрее.</strong>
+    </p>
     <div class="m-5">
         <h4>Быстрые контакты</h4>
     <ul>
@@ -125,10 +133,10 @@
 
 </div>
 <h4>Мы на карте</h4>
-<div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/19/syktyvkar/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Сыктывкар</a><a href="https://yandex.ru/maps/19/syktyvkar/house/ulitsa_mendeleyeva_2/YUkYcQRnT0cOQFhrfXRxcn9mZw==/?ll=50.739486%2C61.803326&utm_medium=mapframe&utm_source=maps&z=17.35" style="color:#eee;font-size:12px;position:absolute;top:14px;">Улица Менделеева, 2 — Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/?ll=50.739486%2C61.803326&mode=whatshere&whatshere%5Bpoint%5D=50.737866%2C61.803514&whatshere%5Bzoom%5D=17&z=17.35" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
-
-   
-    <footer class="footer">
+<div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/19/syktyvkar/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Сыктывкар</a><a href="https://yandex.ru/maps/19/syktyvkar/house/ulitsa_mendeleyeva_2/YUkYcQRnT0cOQFhrfXRxcn9mZw==/?ll=50.739486%2C61.803326&utm_medium=mapframe&utm_source=maps&z=17.35" style="color:#eee;font-size:12px;position:absolute;top:14px;">Улица Менделеева, 2 — Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/?ll=50.739486%2C61.803326&mode=whatshere&whatshere%5Bpoint%5D=50.737866%2C61.803514&whatshere%5Bzoom%5D=17&z=17.35" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
+</div>
+    </div>
+ <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4">
@@ -156,7 +164,7 @@
                 <p class="mb-0">© 2025 Tech Academy. Все права защищены.</p>
             </div>
         </div>
-    </footer>
+</footer>
      <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
