--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tech Academy</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -32,18 +35,89 @@
             </div>
         </nav>
     </header>
-    <section class="hero-section">
+    <section class="hero-section mt-5">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-8 mx-auto text-center">
                     <h1 class="display-5 fw-bold mb-4">Tech Academy</h1>
-                    <p class="lead mb-4">Онлайн-обучение современным IT-профессиям. Начните карьеру в технологиях с нами.</p>
+                    <p class="lead mb-4">Онлайн-обучение современным IT-профессиям. Начните карьеру в технологиях с
+                        нами.</p>
                 </div>
                 <a href="" class="btn btn-light btn-lg">Начать обучение</a>
             </div>
         </div>
     </section>
- <section class="py-5 bg-light mt-5">
+    <section id="about" class="about-section mt-5">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 mb-5 mb-lg-0">
+                    <h2 class="fw-bold mb-4">О Tech Academy</h2>
+                    <p class="lead mb-4">Мы - ведущая образовательная платформа, которая помогает людям освоить
+                        востребованные IT-профессии и построить успешную карьеру в технологиях.</p>
+
+                    <div class="row mb-4">
+                        <div class="col-sm-6 mb-3">
+                            <div class="d-flex">
+                                <div class="feature-icon">
+                                    <i class="bi bi-rocket-takeoff text-white fs-5"></i>
+                                </div>
+                                <div class="ms-3">
+                                    <h5>Быстрый старт</h5>
+                                    <p class="text-muted mb-0">Начните обучение сразу после регистрации</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 mb-3">
+                            <div class="d-flex">
+                                <div class="feature-icon">
+                                    <i class="bi bi-briefcase text-white fs-5"></i>
+                                </div>
+                                <div class="ms-3">
+                                    <h5>Карьера</h5>
+                                    <p class="text-muted mb-0">Помогаем с трудоустройством после обучения</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-sm-6 mb-3">
+                            <div class="d-flex">
+                                <div class="feature-icon">
+                                    <i class="bi bi-people text-white fs-5"></i>
+                                </div>
+                                <div class="ms-3">
+                                    <h5>Сообщество</h5>
+                                    <p class="text-muted mb-0">Присоединяйтесь к 5000+ выпускников</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 mb-3">
+                            <div class="d-flex">
+                                <div class="feature-icon">
+                                    <i class="bi bi-clock text-white fs-5"></i>
+                                </div>
+                                <div class="ms-3">
+                                    <h5>Гибкий график</h5>
+                                    <p class="text-muted mb-0">Учитесь в удобное для вас время</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-5">
+                    <div class="col-12">
+                        <div class="bg-primary text-white p-5 rounded text-center">
+                            <h3 class="fw-bold mb-3">Присоединяйтесь к нам сегодня!</h3>
+                            <p class="mb-4">Начните свой путь в IT вместе с Tech Academy</p>
+                            <a href="#" class="btn btn-light btn-lg">Начать обучение</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="py-5 bg-light mt-5">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-4 mb-4">
@@ -60,35 +134,35 @@
                 </div>
             </div>
         </div>
-    </section>
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <h4 class="mb-3">Tech Academy</h4>
-                    <p>Онлайн-платформа для обучения современным технологиям</p>
+</section>
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 mb-4">
+                        <h4 class="mb-3">Tech Academy</h4>
+                        <p>Онлайн-платформа для обучения современным технологиям</p>
+                    </div>
+                    <div class="col-lg-3 col-md-6 mb-4">
+                        <h5 class="mb-3">Навигация</h5>
+                        <ul class="list-unstyled">
+                            <li class="mb-2"><a href="#" class="text-white text-decoration-none">Главная</a></li>
+                            <li class="mb-2"><a href="#" class="text-white text-decoration-none">Курсы</a></li>
+                            <li class="mb-2"><a href="#" class="text-white text-decoration-none">Контакты</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3">
+                        <h5 class="mb-3">Контакты</h5>
+                        <ul class="list-unstyled">
+                            <li class="mb-2">info@techAcademy.ru</li>
+                            <li class="mb-2">+7 (903) 123-45-67</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <h5 class="mb-3">Навигация</h5>
-                    <ul class="list-unstyled">
-                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Главная</a></li>
-                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Курсы</a></li>
-                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Контакты</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-3">
-                    <h5 class="mb-3">Контакты</h5>
-                    <ul class="list-unstyled">
-                        <li class="mb-2">info@techAcademy.ru</li>
-                        <li class="mb-2">+7 (903) 123-45-67</li>
-                    </ul>
+                <hr>
+                <div class="text-center">
+                    <p class="mb-0">© 2025 Tech Academy. Все права защищены.</p>
                 </div>
             </div>
-            <hr>
-            <div class="text-center">
-                <p class="mb-0">© 2025 Tech Academy. Все права защищены.</p>
-            </div>
-        </div>
-    </footer>
+        </footer>
 </body>
 </html>
