--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a href="" class="nav-link active">Главная</a>
+                            <a href="index.html" class="nav-link active">Главная</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link">Курсы</a>
+                            <a href="courses.html" class="nav-link">Курсы</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link">Контакты</a>
+                            <a href="contacts.html" class="nav-link">Контакты</a>
                         </li>
                     </ul>
                     <div class="ms-lg-3 mt-3 mt-lg-0">
-                        <a href="" class="btn btn-outline-light">Войти</a>
+                        <a href="#" class="btn btn-outline-light">Войти</a>
                     </div>
                 </div>
             </div>
