Фикс формы на странице контактов

--- a/contacts.html
+++ b/contacts.html
@@ -60,6 +60,7 @@
           id="exampleInputEmail1"
           aria-describedby="emailHelp"
           placeholder="Иванов Иван Иванович"
+          required
         />
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Почта</label>
@@ -69,6 +70,7 @@
           id="exampleInputEmail1"
           aria-describedby="emailHelp"
           placeholder="Например ivanov@mail.ru"
+          required
         />
       </div>
       <div class="form-floating">
@@ -76,6 +78,7 @@
           class="form-control"
           placeholder="Введите ваше сообщение"
           id="floatingTextarea"
+          required
         ></textarea>
         <label for="floatingTextarea">Сообщение</label>
       </div>
